# infra

./: .gitignore  README.md  flake.nix  misc-setup.sh  regular-fedora-setup.sh  terraform.tfstate  terraform.tfstate.backup  terraform_output.json
docker-ingest/: docker-compose.toml
helm/: values-nightly.yaml  values-prod.yaml
helm-kessler/: values-prod.yaml
helm-kessler/templates/: backend-deployment.yaml  backend-service.yaml  env-global-configmap.yaml  frontend-service.yaml  ingress-backend.yaml  ingress-frontend.yaml  secrets.yaml
helm/templates/: backend-deployment.yaml  backend-service.yaml  certificate-backend.yaml  configmap.yaml  (+10 more)
kessler-dashboard/: Cargo.toml
kessler-dashboard/docs/llm/: maud.md  project_spec.md  tmp.md
kessler-dashboard/src/: main.rs  users.rs  web.rs
kessler-dashboard/src/app/: admin.rs  auth.rs  mod.rs  routes.rs
kessler-dashboard/src/components/templates/: admin.rs  base.rs  global.rs  login.rs  mod.rs
kessler-dashboard/src/lib/: mod.rs
kessler-dashboard/src/web/: admin.rs  app.rs  auth.rs  error.rs  templates.rs
kessler-dashboard/templates/: admin.html  admin_partial.html  base.html
logging/: docker-compose.yaml
logging-compose/: docker-compose.yaml
logging-monolith/: docker-compose.yaml
nix/: config.nix  docker.nix  iso-builder.nix  k3s.nix
playbooks/: create_users_and_keys.yml  generate_inventory.py
quickwit/: quickwit-values.yaml
terraform/: README.md  build_systems.sh  deploy_to_with.sh  main.tf
webhook-deploys/: README.md  main.py  pyproject.toml  start-root-server.sh
webhook_deploys/: main.py
(+10 files in other folders)
