[package]
name = "kessler-dashboard"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
askama = { version = "0.14" }
axum = { version = "0.8.1", features = ["macros"] }
axum-login = "0.17.0"
axum-messages = "0.8.0"
axum-htmx = { version = "0.8.1", features = ["auto-vary"] }
anyhow = "1.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0.0"
